# goit-ds-hw-02

./: README.md  create_db.py  hw_db.db  pyproject.toml  queries.py  seed.py  tables_create.sql
