[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav Hnyloskurenko",email = "v.hniloskurenko@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "faker (>=37.5.3,<38.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
